<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">顾阳</string>
    <string name="app_slogan">让每一天更精彩</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="home">首页</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>
    <string name="invite_code">邀请码（选填）</string>
    <string name="btn_login">登 录</string>
    <string name="btn_register">注 册</string>
    <string name="no_account">没有账号？立即注册</string>
    <string name="has_account">已有账号？返回登录</string>
    <string name="welcome_back">欢迎回来</string>
    <string name="welcome_register">创建你的账号</string>
    <string name="tab_home">首页</string>
    <string name="tab_discover">发现</string>
    <string name="tab_msg">消息</string>
    <string name="tab_me">我的</string>
</resources>
